--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -13,7 +13,11 @@ h1{
   -webkit-column-gap:20px;
   -moz-column-gap:20px;
   column-gap:20px;
+  
 }
+
+
+
 @media (max-width:1200px){
   #gallery{
   -webkit-column-count:3;
@@ -50,8 +54,14 @@ h1{
   box-shadow:-3px 5px 15px #000;
   cursor: pointer;
   -webkit-transition: all 0.2s;
-  transition: all 0.2s;
+  transition: all 0.5s;
 }
+
+#gallery img:hover{
+  cursor:pointer;
+  
+}
+
 .modal-img,.model-vid{
   width:100%;
   height:auto;
@@ -59,3 +69,4 @@ h1{
 .modal-body{
   padding:0px;
 }
+
