--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -13,10 +13,17 @@ h1{
   -webkit-column-gap:20px;
   -moz-column-gap:20px;
   column-gap:20px;
-  
+
 }
 
-
+.container{
+  width:100%;
+  height:100%;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
 
 @media (max-width:1200px){
   #gallery{
@@ -70,3 +77,81 @@ h1{
   padding:0px;
 }
 
+
+.project-section{
+ 
+
+  height: auto;
+  margin: 5% 0% 5% 0;
+  border: 2px solid black;
+  border-radius: 5px;
+  /*fancy box*/
+  border-radius: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  
+  /* portfolio fancy box */
+  -webkit-transition: all 0.2s;
+  transition: all 0.5s;
+
+}
+
+.project-section::before{
+
+}
+.img-section{
+  position: relative;
+  padding: 0% !important;
+  filter:brightness(0.7);
+}
+.img-section:hover::before{
+  border-radius: 1rem !important;
+  position: relative;
+  padding: 0% !important;
+  content:"";
+  position:absolute;
+  top:0;
+  left:0;
+  bottom: 0;
+  right: 0;
+
+  backdrop-filter: blur(20px) !important;
+  box-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.4), inset 0px 0px 35px rgba(0, 0, 0, 0.08);
+}
+
+.img{
+  height: 100%; 
+  width: 100%; 
+  border-radius: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+
+}
+
+
+
+.proj-title{
+  /* Center the text above the Image */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: white;
+  font-style: italic;
+
+}
+
+.description{
+  z-index: 1;
+  /*center it to the middle */
+  position: absolute;
+  background-position: right;
+  top: 33%;
+
+
+  border: 1px solid black;
+
+  height: 30%;
+  padding:0;
+}
