--- a/src/App.css
+++ b/src/App.css
@@ -43,5 +43,5 @@ body {
   font-family: "Montserrat", sans-serif;
   text-align: center;
   overflow: hidden !important;
-  background: #fff;
+  background-color: #f7f4f2;
 }
